--- a/.env
+++ b/.env
@@ -1,8 +1,3 @@
 
-
-MONGO_URI=mongodb+srv://bockservices:bock-services123@cluster1.aowgmai.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-COOKIE_PASSWORD=sieL67H7GbkzJ4XCoH0IHcm01hGBSiG5
-
-ACCESS_TOKEN_SECRET=rsa encrypted_secret
-
-REFRESH_TOKEN_SECRET=rsa_encrypted_refresh_secret
+DATABASE_URL="postgresql://neondb_owner:npg_o7pH0uYeBMVQ@ep-mute-haze-a431c4vk-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+JWT_SECRET="THIS_IS_A_VERY_SECRET_KEY_CHANGE_IT_LATER"
