--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "blinkit",
+  "name": "swiggy-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "Backend for a Swiggy-like food and grocery delivery application",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
-  "type": "module",
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@adminjs/fastify": "^4.1.3",
-    "@adminjs/mongoose": "^4.1.0",
-    "@adminjs/themes": "^1.0.1",
-    "@fastify/cookie": "^11.0.2",
-    "@fastify/cors": "^10.0.2",
-    "@fastify/session": "^11.0.1",
-    "adminjs": "^7.8.13",
-    "connect-mongodb-session": "^5.0.0",
-    "dotenv": "^16.4.7",
-    "fastify": "^5.2.1",
-    "fastify-plugin": "^5.0.1",
-    "fastify-socket.io": "^5.1.0",
+    "@prisma/client": "^5.14.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.4",
-    "nodemon": "^3.1.7",
-    "socket.io": "^4.8.1",
-    "tslib": "^2.8.1"
+    "pg": "^8.11.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "prisma": "^5.14.0"
   }
 }
